--- a/src/index.html
+++ b/src/index.html
@@ -16,18 +16,18 @@
             <section class="round-item-size-inputs">
                 <div> 
                     <label class="input-caption" for="width">width</label>
-                    <input data-dimension="width" max="500" id="width" type="number" class="input-value size width">
+                    <input data-place="width" max="500" id="width" type="number" class="input-value size">
                 </div>
                 <div>
                     <label class="input-caption" for="height">height</label>
-                    <input data-dimension="height" max="500" type="number" id="height" class="input-value size height">
+                    <input data-place="height" max="500" type="number" id="height" class="input-value size">
                 </div>
             </section>
             <section class="border-radius-settings">
-                <input min="0" max="500" placeholder="top-left-radius" class="input-value top-left-radius" type="number">
-                <input min="0" max="500" placeholder="top-right-radius" class="input-value top-right-radius" type="number">
-                <input min="0" max="500" placeholder="bottom-left-radius" class="input-value bottom-left-radius" type="number">
-                <input min="0" max="500" placeholder="bottom-right-radius" class="input-value bottom-right-radius" type="number">
+                <input data-place="borderTopLeftRadius" min="0" max="500" placeholder="top-left-radius" class="input-value" type="number">
+                <input data-place="borderTopRightRadius" min="0" max="500" placeholder="top-right-radius" class="input-value" type="number">
+                <input data-place="borderBottomLeftRadius" min="0" max="500" placeholder="bottom-left-radius" class="input-value" type="number">
+                <input data-place="borderBottomRightRadius" min="0" max="500" placeholder="bottom-right-radius" class="input-value" type="number">
             </section>
         </section>
     </main>
