--- a/src/index.html
+++ b/src/index.html
@@ -11,16 +11,24 @@
 <body>
     <main class="app">
         <section class="app-content">
-            <div title="preview rounded element" class="rounded-item"></div>
+            <header>
+                <h1 class="app-title">Border Radius Generator</h1>
+            </header>
+            <div title="Live view of element" class="rounded-item">
+            </div>
             <button class="rounded-item_change-size">Change element size</button>
+            <button class="button-copy-code">Copy to ClipBoard</button>
+            <div class="copy-notification">
+                <h2>text has been copied</h2>
+            </div>
             <section class="round-item-size-inputs">
                 <div> 
                     <label class="input-caption" for="width">width</label>
-                    <input data-place="width" max="500" id="width" type="number" class="input-value size">
+                    <input maxlength="4" data-maxvalue="4" data-place="width" max="500" id="width" type="number" class="input-value">
                 </div>
                 <div>
                     <label class="input-caption" for="height">height</label>
-                    <input data-place="height" max="500" type="number" id="height" class="input-value size">
+                    <input maxlength="4" data-place="height" max="500" type="number" id="height" class="input-value">
                 </div>
             </section>
             <section class="border-radius-settings">
