--- a/src/index.html
+++ b/src/index.html
@@ -24,11 +24,11 @@
             <section class="round-item-size-inputs">
                 <div> 
                     <label class="input-caption" for="width">width</label>
-                    <input maxlength="4" data-maxvalue="4" data-place="width" max="500" id="width" type="number" class="input-value">
+                    <input maxlength="4" data-maxvalue="4" data-place="width" max="500" id="width" type="number" class="input-value size">
                 </div>
                 <div>
                     <label class="input-caption" for="height">height</label>
-                    <input maxlength="4" data-place="height" max="500" type="number" id="height" class="input-value">
+                    <input maxlength="4" data-place="height" max="500" type="number" id="height" class="input-value size">
                 </div>
             </section>
             <section class="border-radius-settings">
