--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,15 +5,28 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="../sass/styles.scss" />
-        <script type="module" defer src="../scripts/app.js">module;</script>
+        <script type="module" defer src="../scripts/app.js">
+            module;
+        </script>
+        <script type="module" defer src="../scripts/theme.js">
+            module;
+        </script>
         <script src="https://kit.fontawesome.com/753d009a2f.js" crossorigin="anonymous"></script>
         <title>Border Radius Generator</title>
     </head>
-    <body>
+    <body class="light-theme">
         <main class="app">
             <section class="app-content">
                 <header class="app-content__header">
                     <h1 class="app__title">Border Radius Generator</h1>
+                    <button class="theme-toggle">
+                        <span class="theme-toggle__icon theme-toggle__icon_sun">
+                            <i class="fa-solid fa-sun"></i>
+                        </span>
+                        <span class="theme-toggle__icon theme-toggle__icon_moon">
+                            <i class="fa-solid fa-moon"></i>
+                        </span>
+                    </button>
                 </header>
                 <div title="Live view of element" class="live-preview-component">
                     <button type="reset" class="generic-button-style clear-inputs" aria-label="clear inputs">
@@ -28,16 +41,32 @@
                     </button>
                     <h2>text has been copied</h2>
                 </div>
-                <form class="live-preview-component_input-sizes">
+                <section class="live-preview-component_input-sizes">
                     <div class="live-preview-component_input-sizes__col">
                         <label class="input-caption" for="width">width</label>
-                        <input min="0" max="500" data-place="width" id="width" type="number" class="input-element" />
+                        <input
+                            value="200"
+                            min="0"
+                            max="500"
+                            data-place="width"
+                            id="width"
+                            type="number"
+                            class="input-element"
+                        />
                     </div>
                     <div class="live-preview-component_input-sizes__col">
                         <label class="input-caption" for="height">height</label>
-                        <input min="0" max="500" data-place="height" type="number" id="height" class="input-element" />
+                        <input
+                            value="200"
+                            min="0"
+                            max="500"
+                            data-place="height"
+                            type="number"
+                            id="height"
+                            class="input-element"
+                        />
                     </div>
-                </form>
+                </section>
                 <section class="border-radius-settings">
                     <input
                         data-place="borderTopLeftRadius"
