dark mode refuse

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,25 +8,14 @@
         <script type="module" defer src="../scripts/app.js">
             module;
         </script>
-        <script type="module" defer src="../scripts/theme.js">
-            module;
-        </script>
         <script src="https://kit.fontawesome.com/753d009a2f.js" crossorigin="anonymous"></script>
         <title>Border Radius Generator</title>
     </head>
-    <body class="light-theme">
+    <body data-darkmode="false" class="light-theme">
         <main class="app">
             <section class="app-content">
                 <header class="app-content__header">
                     <h1 class="app__title">Border Radius Generator</h1>
-                    <button class="theme-toggle">
-                        <span class="theme-toggle__icon theme-toggle__icon_sun">
-                            <i class="fa-solid fa-sun"></i>
-                        </span>
-                        <span class="theme-toggle__icon theme-toggle__icon_moon">
-                            <i class="fa-solid fa-moon"></i>
-                        </span>
-                    </button>
                 </header>
                 <div title="Live view of element" class="live-preview-component">
                     <button type="reset" class="generic-button-style clear-inputs" aria-label="clear inputs">
